--- a/wiki/pl/Sketcher_Dimension.html
+++ b/wiki/pl/Sketcher_Dimension.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher Dimension/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Sketcher+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Bema&szlig;en (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Sketcher_Dimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Dimension (91% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Dimensione (91% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#23544;&#27861; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#49828;&#52992;&#52824; &#52824;&#49688; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -87,9 +87,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/pl">Wymiary poziome</a> oraz <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/pl">wymiary pionowe</a> maj&#261; odr&#281;bne zachowanie w por&oacute;wnaniu z <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/pl">wymiarami odleg&#322;o&#347;ci</a>. Pierwsze dwa typy wymiar&oacute;w wi&#261;&#380;&#261; r&oacute;wnie&#380; wzgl&#281;dne po&#322;o&#380;enia mierzonych punkt&oacute;w, tak &#380;e nie mog&#261; one <a href="../pl/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/pl">zmieni&#263; miejsca</a>. Przyk&#322;adowo, dla wymiaru poziomego lewy punkt zawsze pozostanie lewym punktem. Nie jest tak z wymiarami odleg&#322;o&#347;ci. U&#380;ywaj&#261;c tego narz&#281;dzia do na&#322;o&#380;enia wi&#261;zania wymiarowego na punkty z tak&#261; sam&#261; wsp&oacute;&#322;rz&#281;dn&#261; X lub Y musisz uwa&#380;a&#263; wskazuj&#261;c punkt do spozycjonowania go. Mo&#380;esz zweryfikowa&#263; kt&oacute;ry typ wymiaru b&#281;dzie utworzony sprawdzaj&#261;c ostatni obiekt w <a href="../pl/Sketcher_Dialog.html#Wi%C4%85zania" title="Sketcher Dialog/pl">sekcji Wi&#261;zania okienka dialogowego Szkicownika</a>, zostanie to dynamicznie zaktualizowane przy ruchu mysz&#261;.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/pl">Wymiary poziome</a> oraz <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/pl">wymiary pionowe</a> maj&#261; odr&#281;bne zachowanie w por&oacute;wnaniu z <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/pl">wymiarami odleg&#322;o&#347;ci</a>. Pierwsze dwa typy wymiar&oacute;w maj&#261; warto&#347;ci ze znakiem i wi&#261;&#380;&#261; r&oacute;wnie&#380; wzgl&#281;dne po&#322;o&#380;enia mierzonych punkt&oacute;w. Mog&#261; one <a href="../pl/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/pl">zmieni&#263; miejsca</a> tylko je&#347;li znak wymiaru ulegnie zmianie. Przyk&#322;adowo, je&#347;li warto&#347;&#263; wymiaru poziomego pozostaje dodatnia lub ujemna, lewy punkt zawsze pozostanie lewym punktem. Nie jest tak z wymiarami odleg&#322;o&#347;ci, kt&oacute;rych warto&#347;ci nie maj&#261; znaku. U&#380;ywaj&#261;c tego narz&#281;dzia do na&#322;o&#380;enia wi&#261;zania wymiarowego na punkty z tak&#261; sam&#261; wsp&oacute;&#322;rz&#281;dn&#261; X lub Y, musisz uwa&#380;a&#263; wskazuj&#261;c punkt do spozycjonowania go. Mo&#380;esz zweryfikowa&#263; kt&oacute;ry typ wymiaru b&#281;dzie utworzony sprawdzaj&#261;c ostatni obiekt w <a href="../pl/Sketcher_Dialog.html#Wi%C4%85zania" title="Sketcher Dialog/pl">sekcji Wi&#261;zania okienka dialogowego Szkicownika</a>, zostanie to dynamicznie zaktualizowane przy ruchu mysz&#261;.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -135,35 +133,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102614
+Cached time: 20260125141427
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 316/1000000
+CPU time usage: 0.095 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 315/1000000
 Post&#8208;expand include size: 26681/2097152 bytes
 Template argument size: 10721/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1679/5000000 bytes
+Unstrip post&#8208;expand size: 1688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.917      1 -total
- 24.55%    4.398      1 Template:Sketcher_Tools_navi/pl
- 17.96%    3.218      1 Template:GuiCommand
- 14.47%    2.593      2 Template:Docnav/pl
- 14.38%    2.576      2 Template:Navigation_menu_2
- 14.11%    2.529      2 Template:Value
- 10.17%    1.823      1 Template:Userdocnavi/pl
-  7.49%    1.342      4 Template:KEY
-  7.43%    1.332      2 Template:Incode
-  7.07%    1.266      1 Template:Button
+100.00%   25.676      1 -total
+ 35.78%    9.186      1 Template:Sketcher_Tools_navi/pl
+ 18.11%    4.650      2 Template:Navigation_menu_2
+ 13.16%    3.380      1 Template:Userdocnavi/pl
+ 12.35%    3.171      2 Template:Value
+ 11.15%    2.862      1 Template:GuiCommand
+ 10.39%    2.668      2 Template:Docnav/pl
+  6.63%    1.703      1 Template:Button
+  6.09%    1.563      4 Template:MenuCommand
+  5.52%    1.416      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332098-0!canonical and timestamp 20260125102614 and revision id 1743599. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332098-0!canonical and timestamp 20260125141427 and revision id 1744040. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
