--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -57,7 +57,8 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h3><span class="mw-headline" id="Further_FEM_improvements">Further FEM improvements</span></h3>
 <ul><li>The <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
 <li>The <span typeof="mw:File"><a href="index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
-<li>The <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
+<li>The <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li>
+<li>The <i>Neumann</i> mode of the <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ConstraintElectrostaticPotential.html" title="FEM ConstraintElectrostaticPotential">Electrostatic potential</a> boundary condition can now be used to apply a magnetic flux density boundary condition. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25897">Pull request #25897</a></li></ul>
 <h2><span class="mw-headline" id="Inspection_Workbench">Inspection Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
 <h2><span class="mw-headline" id="Material_Workbench">Material Workbench</span></h2>
@@ -90,13 +91,13 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260124163746
+Cached time: 20260125142333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 218/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.099 seconds
+Preprocessor visited node count: 220/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
 Highest expansion depth: 5/100
@@ -106,14 +107,14 @@ Unstrip post&#8208;expand size: 857/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.776      1 -total
- 54.82%    2.618      2 Template:Message
- 21.03%    1.004      1 Template:VeryImportantMessage
- 19.30%    0.922      1 Template:FileName
- 17.80%    0.850      1 Template:TOCright
+100.00%    3.452      1 -total
+ 45.77%    1.580      2 Template:Message
+ 27.46%    0.948      1 Template:VeryImportantMessage
+ 20.69%    0.714      1 Template:FileName
+ 18.95%    0.654      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124163747 and revision id 1743420. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260125142349 and revision id 1744041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
