--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -66,6 +66,7 @@
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>Creates a FEM boundary condition for the electrostatic potential. To be used together with the <a href="FEM_EquationElectrostatic.html" title="FEM EquationElectrostatic">Electrostatic</a>, <a href="FEM_EquationElectricforce.html" title="FEM EquationElectricforce">Electricforce</a>, <a href="FEM_EquationMagnetodynamic.html" title="FEM EquationMagnetodynamic">Magnetodynamic</a>, <a href="FEM_EquationMagnetodynamic2D.html" title="FEM EquationMagnetodynamic2D">Magnetodynamic2D</a> or <a href="FEM_EquationStaticCurrent.html" title="FEM EquationStaticCurrent">Static current</a> equation.
 </p><p><span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Works also with the refactored <a href="FEM_SolverCalculixCcxtools.html" title="FEM SolverCalculixCcxtools">CalculiX solver object</a>.
+</p><p><span style="font-size:small;"><a href="Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>: Can also be used to apply a magnetic flux density boundary condition.
 </p><p><span typeof="mw:File"><a href="index.php?title=FEM_electro_potential_sphere.PNG&amp;filetimestamp=20250617071812&amp;.html" class="mw-file-description"><img src="File/FEM_electro_potential_sphere.PNG" decoding="async" width="400" height="414" class="mw-file-element" data-file-width="598" data-file-height="619"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Electrostatic potential boundary condition in the capacitance of two spheres <a href="FEM_Examples.html" title="FEM Examples">FEM Example</a></p>
@@ -142,15 +143,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125142729
+Cached time: 20260125142900
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 432/1000000
-Post&#8208;expand include size: 24498/2097152 bytes
-Template argument size: 9898/2097152 bytes
+CPU time usage: 0.112 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 440/1000000
+Post&#8208;expand include size: 24575/2097152 bytes
+Template argument size: 9904/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -158,19 +159,19 @@ Unstrip post&#8208;expand size: 1829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.158      1 -total
- 31.15%    8.772      1 Template:GuiCommandContainer
- 22.46%    6.325      1 Template:FEM_Tools_navi
- 20.14%    5.672      2 Template:Navigation_menu_2
- 15.81%    4.453      1 Template:Userdocnavi
- 14.33%    4.036      1 Template:GuiCommandFemInfo
- 11.54%    3.250      1 Template:GuiCommand
-  7.83%    2.204      2 Template:Docnav
-  4.71%    1.327      3 Template:VersionPlus
-  4.67%    1.316      1 Template:Caption
+100.00%   18.287      1 -total
+ 29.03%    5.308      1 Template:GuiCommandContainer
+ 22.04%    4.030      1 Template:FEM_Tools_navi
+ 21.06%    3.851      2 Template:Navigation_menu_2
+ 14.38%    2.630      1 Template:GuiCommandFemInfo
+ 12.48%    2.283      1 Template:Userdocnavi
+ 10.63%    1.945      2 Template:Docnav
+  9.45%    1.728      1 Template:GuiCommand
+  5.60%    1.023      5 Template:Version
+  5.49%    1.004      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125142759 and revision id 1744042. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125142900 and revision id 1744043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
