--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -76,7 +76,7 @@
 <li>Select the <b>Model &rarr; Electromagnetic Boundary Conditions &rarr; <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Electrostatic Potential Boundary Condition</b> option from the menu.</li></ul></li>
 <li><span style="font-size:small;color:green;">1.1 and above</span>: Select a boundary condition type and its parameters:
 <ul><li><i>Dirichlet</i> - select and specify <i>Potential</i> or <i>Electromagnetic Potential</i>. Optionally, set <i>Electric Infinity</i> and <i>Potential Constant</i>.</li>
-<li><i>Neumann</i> - specify <i>Electric Flux Density</i> or (<span style="font-size:small;color:green;">1.2 and above</span>) check <i>Magnetic flux density</i> and specify its vector components.</li></ul></li>
+<li><i>Neumann</i> - specify <i>Electric Flux Density</i> or (<span style="font-size:small;"><a href="Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>) check <i>Magnetic flux density</i> and specify its vector components.</li></ul></li>
 <li>Optionally, define the <i>Capacitance Body</i>.</li>
 <li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Add</span> button.</li>
 <li>In the <a href="3D_View.html" title="3D View">3D View</a> select the object the boundary condition should be applied to. <span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: To remove objects from the selection, press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Remove</span> button.</li></ol>
@@ -143,15 +143,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125142900
+Cached time: 20260125142913
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 440/1000000
-Post&#8208;expand include size: 24575/2097152 bytes
-Template argument size: 9904/2097152 bytes
+CPU time usage: 0.103 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 441/1000000
+Post&#8208;expand include size: 24589/2097152 bytes
+Template argument size: 9907/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -159,19 +159,19 @@ Unstrip post&#8208;expand size: 1829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.287      1 -total
- 29.03%    5.308      1 Template:GuiCommandContainer
- 22.04%    4.030      1 Template:FEM_Tools_navi
- 21.06%    3.851      2 Template:Navigation_menu_2
- 14.38%    2.630      1 Template:GuiCommandFemInfo
- 12.48%    2.283      1 Template:Userdocnavi
- 10.63%    1.945      2 Template:Docnav
-  9.45%    1.728      1 Template:GuiCommand
-  5.60%    1.023      5 Template:Version
-  5.49%    1.004      1 Template:Caption
+100.00%   21.464      1 -total
+ 37.51%    8.052      1 Template:GuiCommandContainer
+ 18.95%    4.067      1 Template:FEM_Tools_navi
+ 18.38%    3.946      2 Template:Navigation_menu_2
+ 15.41%    3.308      1 Template:GuiCommandFemInfo
+ 13.21%    2.836      1 Template:GuiCommand
+ 12.02%    2.580      2 Template:Docnav
+ 10.66%    2.289      1 Template:Userdocnavi
+  4.33%    0.930      1 Template:Caption
+  4.25%    0.913      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125142900 and revision id 1744043. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125142913 and revision id 1744044. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
