--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -77,7 +77,7 @@
 <li>Vyberte v menu volbu <b>Part Design &rarr; <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Nov&eacute; t&#283;leso</b>.</li></ul></li>
 <li>Vytvo&#345;&iacute; se pr&aacute;zdn&eacute; t&#283;leso, kter&eacute; se automaticky stane <a href="../PartDesign_Body.html#Active_status" title="PartDesign Body">aktivn&iacute;</a>.</li>
 <li>Nyn&iacute; m&#367;&#382;ete stisknout tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a></span> pro vytvo&#345;en&iacute; <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rtu</a> v t&#283;lese, kter&yacute; lze pou&#382;&iacute;t s n&aacute;strojem <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a></span>.</li>
-<li>Alternativn&#283; m&#367;&#382;ete p&#345;idat z&aacute;kladn&iacute; <a href="../index.php?title=PartDesign_Features&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Features (page does not exist)">PartDesign prvek</a>, nap&#345;&iacute;klad <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveBox.html" title="PartDesign AdditiveBox">P&iacute;davn&yacute; kv&aacute;dr</a></span>.</li></ol>
+<li>Alternativn&#283; m&#367;&#382;ete p&#345;idat z&aacute;kladn&iacute; <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvek</a>, nap&#345;&iacute;klad <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveBox.html" title="PartDesign AdditiveBox">P&iacute;davn&yacute; kv&aacute;dr</a></span>.</li></ol>
 <p>If a solid object is selected:
 </p>
 <ol><li>There are several ways to invoke the tool:
@@ -249,12 +249,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125171844
+Cached time: 20260125172006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.167 seconds
-Real time usage: 0.238 seconds
+CPU time usage: 0.163 seconds
+Real time usage: 0.242 seconds
 Preprocessor visited node count: 1499/1000000
 Post&#8208;expand include size: 37742/2097152 bytes
 Template argument size: 9889/2097152 bytes
@@ -265,19 +265,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.922      1 -total
- 14.29%    8.275     14 Template:PropertyData
- 12.60%    7.297     20 Template:Variable
- 10.64%    6.164      1 Template:PartDesign_Tools_navi/cs
-  8.02%    4.644      1 Template:Userdocnavi/cs
-  7.85%    4.544      6 Template:PropertyView
-  7.69%    4.452      3 Template:TitleProperty
-  7.38%    4.272      1 Template:GuiCommand
-  5.50%    3.188      2 Template:Navigation_menu_2
-  5.15%    2.985     13 Template:Button
+100.00%   47.661      1 -total
+ 15.85%    7.555     14 Template:PropertyData
+ 12.95%    6.173     20 Template:Variable
+ 11.89%    5.669      1 Template:PartDesign_Tools_navi/cs
+  9.43%    4.493      1 Template:Userdocnavi/cs
+  8.29%    3.951      1 Template:GuiCommand
+  7.68%    3.660      2 Template:Navigation_menu_2
+  6.71%    3.196      2 Template:Docnav
+  5.84%    2.783      2 Template:Code
+  5.61%    2.673      6 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125171843 and revision id 1744069. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172005 and revision id 1744071. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
